# sgtsnepi

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  DEV_PLAN.md  LICENSE  README.md  index.html  install.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  python-publish.yml
api/: attractive.html  embedding.html  estimator.html  index.html  knn.html  lambda-eq.html  repulsive.html  sgtsnepi.html
docs/: .pages  index.md  install.md
docs/api/: .pages  attractive.md  embedding.md  estimator.md  index.md  knn.md  lambda-eq.md  repulsive.md  sgtsnepi.md
docs/examples/: .pages  lambda_eq.md
examples/: 01_digits_quickstart.html  01_digits_quickstart.ipynb  02_mnist_embedding.html  02_mnist_embedding.ipynb  03_graph_embedding.html  03_graph_embedding.ipynb
search/: search_index.js  search_index.json
src/pysgtsnepi/: __init__.py  api.py  attractive.py  embedding.py  estimator.py  knn.py  repulsive.py  vis.py
src/pysgtsnepi/utils/: __init__.py  graph_rescaling.py  graph_weights.py  sgtsne_lambda_equalization.py
stylesheets/: extra.css
tests/: test_api.py  test_attractive.py  test_embedding.py  test_estimator.py  test_examples.py  test_knn.py  test_local_weights.py  test_repulsive.py
